tests/valid/proc_args.fl
main :: proc (a: i32) {
  b := a;
}
