tests/invalid/invalid_subscript.fl
main :: proc () {
  a := 123[2];
}
